test_regress/t/t_randomize_method_types_unsup.out
%Warning-CONSTRAINTIGN: t/t_randomize_method_types_unsup.v:16:17: Unsupported: randomizing this expression, treating as state
   16 |       dynarr[1].size < 10;
      |                 ^~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:10:13: Unsupported: random member variable with the type of the containing class
                                                            : ... note: In instance 't'
   10 |    rand Cls cls;
      |             ^~~
%Warning-CONSTRAINTIGN: t/t_randomize_method_types_unsup.v:28:43: Unsupported: randomizing this expression, treating as state
   28 |       res = obj.randomize() with { dynarr.size > 2; };
      |                                           ^~~~
%Error: Exiting due to
